feat: s3 url base64 인코딩 문자열로 전달 구현